k8s/staging/resources.yaml
---
# API Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-staging
  namespace: models
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-staging
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: api-staging
    spec:
      containers:
        - name: api
          image: gcr.io/project-id/models-rj-sms-api
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 500m
              memory: 2Gi
          command: ["/bin/bash", "/compose-entrypoint.sh"]
          livenessProbe:
            httpGet:
              path: /misc/health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /misc/health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
      restartPolicy: Always

---
# Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-staging
  name: api-staging
  namespace: models
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: api-staging

---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-staging
  namespace: models
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - staging.models-rj-sms.dados.rio
      secretName: staging.models-rj-sms-tls
  rules:
    - host: staging.models-rj-sms.dados.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-staging
                port:
                  number: 80
